--- a/css/layout/firstRowSecond3Cell.html
+++ b/css/layout/firstRowSecond3Cell.html
@@ -41,7 +41,7 @@
     <div id="firstRow">首行</div>
     <div id="secRow">
         <div id="secLeft">左边</div>
-        <div id="secCenter">中间</div>
+        <div id="secCenter">中间尼玛</div>
         <div id="secRight">右边</div>
     </div>
     <div>底部</div>
